# TREXT

./: CMakeLists.txt  README.md
app/: Main.qml  ScreenShootMenu.qml  SystemEventFilter.hpp  main.cpp  resources.qrc  screenshothelper.cpp  screenshothelper.hpp
